# saiga_bot

./: .flake8  .uvignore  Makefile  NOTICE  PLAN.md  README.md  bot.py  characters.json  client_config.json  database.py  fetch_vqa.py  localization_config.json  migrate.py  pyproject.toml  requirements.txt  run.sh  tools_config.json
.github/workflows/: python.yml
configs/: bot.json  characters.json  localization.json  providers.json  tools.json  yookassa.json
prompts/: agent_prompt.yaml  agent_query_prompt.jinja2
scripts/: anthropic2openai.js  browser.py  browser.tcss  fetch_textual_conversations.py  fetch_vqa.py  migrate.py  subscribe.py
src/: agents.py  bot.py  configs.py  database.py  decorators.py  document_loader.py  llm_filter.py  localization.py  messages.py  payments.py  provider.py  registrable.py  tokenizers.py  utils.py
src/tools/: __init__.py  base.py  dalle.py  datetime.py  edit_image.py  fetch.py  generate_image.py  search.py  terrarium.py
templates/: ru_help.jinja  ru_limits.jinja  ru_privacy.jinja  ru_sub.jinja
tests/: conftest.py  test_agents.py  test_llm_filter.py  test_provider.py  test_tool_dalle.py  test_tool_generate_image.py  test_tool_search.py
